--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,1 +1,8 @@
+# Parsing interval in seconds
 rabbit.interval=10
+
+# Database connection settings
+jdbc.url=jdbc:postgresql://127.0.0.1:5432/grabber
+jdbc.driver=org.postgresql.Driver
+jdbc.username=postgres
+jdbc.password=password
