--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.15.3</version>
+    </dependency>
   </dependencies>
 
   <build>
