--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,6 @@
+# Parsing interval in seconds
+time=60
+
 # Database connection settings
 jdbc.url=jdbc:postgresql://127.0.0.1:5432/grabber
 jdbc.driver=org.postgresql.Driver
