--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -6,3 +6,6 @@ jdbc.url=jdbc:postgresql://127.0.0.1:5432/grabber
 jdbc.driver=org.postgresql.Driver
 jdbc.username=postgres
 jdbc.password=password
+
+# Web
+port=9000
